--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="max-w-4xl mx-auto text-center">
             <h2 class="text-2xl md:text-5xl font-title font-bold text-white uppercase italic mb-10">DEMONSTRAÇÃO DO <span class="text-blue-500">SISTEMA</span></h2>
             <div class="video-container shadow-2xl glass-card">
-                <iframe src="https://www.youtube.com/embed/fD366Wv-j8I?rel=0&modestbranding=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://youtu.be/zSTShVPdWUA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </section>
