--- a/index.html
+++ b/index.html
@@ -114,12 +114,21 @@
     </section>
 
     <section class="py-16 px-6 bg-[#080808]">
-        <div class="max-w-4xl mx-auto text-center">
-            <h2 class="text-2xl md:text-5xl font-title font-bold text-white uppercase italic mb-10">DEMONSTRAÇÃO DO <span class="text-blue-500">SISTEMA</span></h2>
-            <div class="video-container shadow-2xl glass-card">
-                <iframe src="https://youtu.be/zSTShVPdWUA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+    <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-2xl md:text-5xl font-title font-bold text-white uppercase italic mb-10">
+            DEMONSTRAÇÃO DO <span class="text-blue-500">SISTEMA</span>
+        </h2>
+        <div class="video-container shadow-2xl glass-card">
+            <iframe 
+                src="https://www.youtube.com/embed/zSTShVPdWUA?rel=0&modestbranding=1" 
+                title="SISTEMA CONTROLE DE PATRIMÔNIO PRO"
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen>
+            </iframe>
         </div>
+    </div>
     </section>
 
     <section class="py-16 px-6">
